TEST_PROGRAMS/INVALID/15/lexer1.go
package main;

func main() {
   println("About to do some important computation!");
   /* no one can stop this comment from ending, 
   *//* it is unstoppable
}
